@@ -4,9 +4,12 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Vector2;
+import com.epimetheus.game.core.component.process.FluidComponent;
 import com.epimetheus.game.core.component.render.RenderComponent;
 import com.epimetheus.game.core.entity.ActorEntity;
+import com.epimetheus.game.core.entity.Entity;
 import com.epimetheus.game.core.entity.EntityList;
 import com.epimetheus.game.core.entity.Location;
 import com.epimetheus.game.core.entity.Tiles;
@@ -21,15 +24,18 @@ public class PondGenerator {
 			numPonds = pondTiles.size();
 		
 		for (int i = 0; i < numPonds; i++) 
-			for (Location loc: pondTiles.removeFirst()) 
-				ponds.add(ActorEntity.generate(
+			for (Location loc: pondTiles.remove(MathUtils.random(pondTiles.size()-1))) {
+				Entity ent = ActorEntity.generate(
 						"tile", 
 						loc, 
 						new Vector2(1,1), 
 						0f, 
 						1f, 
 						(RenderComponent) RenderComponent.generate(Tiles.getTexture(Tiles.ROCKYSOIL)), 
-						handler));
+						handler);
+				ent.addComponent(FluidComponent.generate("water", loc.getZ()-depth));
+				ponds.add(ent);
+				}
 		
 		return ponds;
 	}
@@ -78,5 +84,44 @@ public class PondGenerator {
 		}
 		
 		return pondLocations;
+	}
+
+	public static EntityList river(Map<Location, Tiles> tiles, ActionHandler handler) {
+		EntityList list = new EntityList();
+		LinkedList<Vector2> points = new LinkedList<>();
+		int max_x = 0;
+		int max_y = 0;
+		
+		for (Location loc: tiles.keySet()) {
+			if (loc.getX() > max_x)
+				max_x = (int)Math.floor((double)loc.getX());
+			if (loc.getY() > max_y)
+				max_y = (int)Math.floor((double)loc.getY());
+		}
+		
+		Location p0 = new Location(MathUtils.random(max_x-1), 0, 0);
+		Location p2 = new Location(0, MathUtils.random(max_y-1), 0);
+		Location p1 = new Location(p0.getX()/2, p2.getY()/2, 0);
+		
+		for (float i = 0; i < 1; i += 0.05f) 
+			points.add(quadBezier(p0,p1,p2,i));
+		
+		System.out.println("p0 = " + p0);
+		System.out.println("p1 = " + p1);
+		System.out.println("p2 = " + p2);
+		
+		System.out.println("River Points");
+		System.out.println(points);
+		
+		return list;
+	}
+	
+	private static Vector2 quadBezier(Location p0, Location p1, Location p2, float t) {
+		Vector2 point = new Vector2();
+		
+		point.x = ((float)Math.pow(1-t, 2d))* p0.getX() + (1-t)*2*t*p1.getX() * t*t*p2.getX();
+		point.y = ((float)Math.pow(1-t, 2d))* p0.getY() + (1-t)*2*t*p1.getY() * t*t*p2.getY();
+		
+		return point;
 	}
 }
